# adrenaline

./: .editorconfig  .env.example  .envrc  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  common.sh  locustfile.py  locustfile_rps.py  parse-results.py  parse-rps-results.py  run-benchmark.sh  run-rps-benchmark.sh
examples/: scenario.yaml
scripts/: bench-setup.sh  env.sh  release.sh  test.sh
src/: baseline.rs  cli.rs  compare.rs  find_limit.rs  hit.rs  lib.rs  main.rs  output.rs  ramp.rs  rate_limit.rs  report.rs  request.rs  runner.rs  scenario.rs  spike.rs  stats.rs
tests/: cli_integration.rs
